styles/style.css
html {
    background-color: #99C55E;
}

body {
    margin: 0;
}

h1 {
    font-family: "Rubik Bubbles", system-ui;
    font-size: 200px;
    color: #FEDE1C;
    text-align: center;
    text-shadow: 3px 3px 1px black;
    margin: 0;
    padding: 20px 0;
}

p, li {
    font-family: "Kirang Haerang", system-ui;
    font-size: 38px;
    text-align: center;
    color: #FEDE1C;
    text-shadow: 1px 1px 1px black;
}

a {
    font-family: "Kirang Haerang", system-ui;
    font-size: 32px;
    text-align: center;
    color: #FEDE1C;
    margin: 20px 0 0 0;
    display: block;
    text-shadow: 1px 1px 1px black;
}

hr {
    height: 0;
    border: 1px solid #FEDE1C;
    box-shadow: 1px 1px 1px black;
}

img {
    display: block;
    margin: 0 auto;
    max-width: 60%;
}

#mainContent {
    width: fit-content;
    margin: 0 auto;
    padding: 0 25px;
}

#interactiveSection {
    margin: 100px auto 50px auto;
}

button {
    font-family: "Kirang Haerang", system-ui;
    font-size: 32px;
    padding: 15px;
    margin: 20px auto;
    color: #FEDE1C;
    background-color: #99C55E;
    border-color: #FEDE1C;
    border-style: solid;
    border-radius: 10px;
    display: block;
    text-shadow: 1px 1px 1px black;
    cursor: pointer;
}

footer {
    background-color: #FEDE1C;
    height: 100px;
}

#secretContent {
    display: none;
}

